<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtSuccess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/successMessage"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="50sp"
        android:textColor="@color/header_background"
        android:layout_marginBottom="50dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txtFailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/failedMessage"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="50sp"
        android:textColor="@color/header_background"
        android:layout_marginBottom="50dp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/backtomenu"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/backToMenu"
        android:onClick="loadMenuLayout"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center"
        android:background="@color/btnColor"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>


</LinearLayout>